{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 128,
  "lineage": "72d17c81-912e-950d-85da-32cc366f57cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b5b3a93ed654d19",
            "arn": "arn:aws:ec2:us-east-1:288533565777:instance/i-03a08963279e45452",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a08963279e45452",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098b7379512f3b0c1",
            "private_dns": "ip-10-0-103-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.103.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-065280fb637aaa9d9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8dd6cb64db5743a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e5e9582cf81ae5ee"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-060c07071cc3a8c20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060c07071cc3a8c20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-096a96a638be88d25"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:vpc/vpc-096a96a638be88d25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2feafe86eadf870",
            "default_route_table_id": "rtb-0c466ac495afdcfd2",
            "default_security_group_id": "sg-0884cc317fe3d8513",
            "dhcp_options_id": "dopt-0826ee2a3cad048a1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096a96a638be88d25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c466ac495afdcfd2",
            "owner_id": "288533565777"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:network-acl/acl-047eeae1007a6b225",
            "default_network_acl_id": "acl-047eeae1007a6b225",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-047eeae1007a6b225",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "288533565777",
            "subnet_ids": [
              "subnet-002a82d55be92ecfe",
              "subnet-0711fcda944535eaa",
              "subnet-077821a542eb20379",
              "subnet-093a25c7c027cf362",
              "subnet-0d8dd6cb64db5743a",
              "subnet-0f1a58a4935103af2"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:route-table/rtb-0f74e2c6b5ee2696f",
            "default_route_table_id": "rtb-0f74e2c6b5ee2696f",
            "id": "rtb-0f74e2c6b5ee2696f",
            "owner_id": "288533565777",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:security-group/sg-0e5e9582cf81ae5ee",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e5e9582cf81ae5ee",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "288533565777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072331ff2cc602e9a",
            "arn": "arn:aws:ec2:us-east-1:288533565777:elastic-ip/eipalloc-072331ff2cc602e9a",
            "association_id": "eipassoc-03aa8703870664897",
            "domain": "vpc",
            "id": "eipalloc-072331ff2cc602e9a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09331d07cf217728e",
            "private_dns": "ip-10-0-101-229.ec2.internal",
            "private_ip": "10.0.101.229",
            "public_dns": "ec2-98-82-227-133.compute-1.amazonaws.com",
            "public_ip": "98.82.227.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f1f8331fa31fdfb",
            "arn": "arn:aws:ec2:us-east-1:288533565777:elastic-ip/eipalloc-07f1f8331fa31fdfb",
            "association_id": "eipassoc-02454bb624203da7e",
            "domain": "vpc",
            "id": "eipalloc-07f1f8331fa31fdfb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01edd483f85ba376f",
            "private_dns": "ip-10-0-102-138.ec2.internal",
            "private_ip": "10.0.102.138",
            "public_dns": "ec2-54-243-45-14.compute-1.amazonaws.com",
            "public_ip": "54.243.45.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c9f5f777405c39",
            "arn": "arn:aws:ec2:us-east-1:288533565777:elastic-ip/eipalloc-091c9f5f777405c39",
            "association_id": "eipassoc-06f08f8216a9eb4a2",
            "domain": "vpc",
            "id": "eipalloc-091c9f5f777405c39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cf860ea9c3719945",
            "private_dns": "ip-10-0-103-72.ec2.internal",
            "private_ip": "10.0.103.72",
            "public_dns": "ec2-44-198-239-190.compute-1.amazonaws.com",
            "public_ip": "44.198.239.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:internet-gateway/igw-0d0462b6c764fea1c",
            "id": "igw-0d0462b6c764fea1c",
            "owner_id": "288533565777",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072331ff2cc602e9a",
            "association_id": "eipassoc-03aa8703870664897",
            "connectivity_type": "public",
            "id": "nat-08f8c6a7895143f9e",
            "network_interface_id": "eni-09331d07cf217728e",
            "private_ip": "10.0.101.229",
            "public_ip": "98.82.227.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-093a25c7c027cf362",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f1f8331fa31fdfb",
            "association_id": "eipassoc-02454bb624203da7e",
            "connectivity_type": "public",
            "id": "nat-033e567d8132887ce",
            "network_interface_id": "eni-01edd483f85ba376f",
            "private_ip": "10.0.102.138",
            "public_ip": "54.243.45.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0711fcda944535eaa",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c9f5f777405c39",
            "association_id": "eipassoc-06f08f8216a9eb4a2",
            "connectivity_type": "public",
            "id": "nat-0cf763a20ad7bdba7",
            "network_interface_id": "eni-0cf860ea9c3719945",
            "private_ip": "10.0.103.72",
            "public_ip": "44.198.239.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8dd6cb64db5743a",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0731c57c0fd1286e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08f8c6a7895143f9e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0731c57c0fd1286e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05f82d068570a20d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-033e567d8132887ce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f82d068570a20d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cad4cba7851d380c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cf763a20ad7bdba7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cad4cba7851d380c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d0462b6c764fea1c",
            "id": "r-rtb-0a724ea13711400f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a724ea13711400f2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:route-table/rtb-0731c57c0fd1286e5",
            "id": "rtb-0731c57c0fd1286e5",
            "owner_id": "288533565777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08f8c6a7895143f9e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:route-table/rtb-05f82d068570a20d5",
            "id": "rtb-05f82d068570a20d5",
            "owner_id": "288533565777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-033e567d8132887ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:route-table/rtb-0cad4cba7851d380c",
            "id": "rtb-0cad4cba7851d380c",
            "owner_id": "288533565777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf763a20ad7bdba7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:route-table/rtb-0a724ea13711400f2",
            "id": "rtb-0a724ea13711400f2",
            "owner_id": "288533565777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0462b6c764fea1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076d1eeb4de7c82c1",
            "route_table_id": "rtb-0731c57c0fd1286e5",
            "subnet_id": "subnet-0f1a58a4935103af2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d42ede76a10dd00a",
            "route_table_id": "rtb-05f82d068570a20d5",
            "subnet_id": "subnet-077821a542eb20379"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08898ab1034dca472",
            "route_table_id": "rtb-0cad4cba7851d380c",
            "subnet_id": "subnet-002a82d55be92ecfe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01546bc8740981afe",
            "route_table_id": "rtb-0a724ea13711400f2",
            "subnet_id": "subnet-093a25c7c027cf362"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01201a9389aea26af",
            "route_table_id": "rtb-0a724ea13711400f2",
            "subnet_id": "subnet-0711fcda944535eaa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e986af77dc92c085",
            "route_table_id": "rtb-0a724ea13711400f2",
            "subnet_id": "subnet-0d8dd6cb64db5743a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-0f1a58a4935103af2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1a58a4935103af2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-077821a542eb20379",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077821a542eb20379",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-002a82d55be92ecfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002a82d55be92ecfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-093a25c7c027cf362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093a25c7c027cf362",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-0711fcda944535eaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0711fcda944535eaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:subnet/subnet-0d8dd6cb64db5743a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8dd6cb64db5743a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288533565777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ada26f0d09d90e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288533565777:vpc/vpc-0ada26f0d09d90e66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047eeae1007a6b225",
            "default_route_table_id": "rtb-0f74e2c6b5ee2696f",
            "default_security_group_id": "sg-0e5e9582cf81ae5ee",
            "dhcp_options_id": "dopt-0826ee2a3cad048a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ada26f0d09d90e66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f74e2c6b5ee2696f",
            "owner_id": "288533565777",
            "tags": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "VPC from Module",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}